[gd_scene load_steps=4 format=3 uid="uid://b3ox6mxkai1n1"]

[ext_resource type="Theme" uid="uid://da2ym3jqvm0nv" path="res://Themes/gflat.tres" id="1_4ek7c"]
[ext_resource type="Script" uid="uid://df8abif88j71o" path="res://Scripts/screen_menu.gd" id="2_1byv6"]
[ext_resource type="PackedScene" uid="uid://bmt4wtrc1jkls" path="res://Scenes/ui_bar_top.tscn" id="3_abgbc"]

[node name="ControlScreenMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 400.0
theme = ExtResource("1_4ek7c")
script = ExtResource("2_1byv6")

[node name="BarTop" parent="." instance=ExtResource("3_abgbc")]
layout_mode = 1
Title = "Main Menu"
Show_Menu_Button = false

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LabelName" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Gong"

[node name="LabelDescription" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Godot \"Pong\""

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="VBoxOptions" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="ButtonNotes" type="Button" parent="MarginContainer/VBoxContainer/VBoxOptions"]
layout_mode = 2
text = "Play"
alignment = 0

[node name="ButtonSettings" type="Button" parent="MarginContainer/VBoxContainer/VBoxOptions"]
layout_mode = 2
text = "Settings"
alignment = 0

[node name="ButtonHelpAbout" type="Button" parent="MarginContainer/VBoxContainer/VBoxOptions"]
layout_mode = 2
text = "Help"
alignment = 0

[node name="ButtonExit" type="Button" parent="MarginContainer/VBoxContainer/VBoxOptions"]
layout_mode = 2
text = "Exit
"
alignment = 0

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxOptions/ButtonNotes" to="." method="_on_button_notes_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxOptions/ButtonSettings" to="." method="_on_button_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxOptions/ButtonHelpAbout" to="." method="_on_button_help_about_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxOptions/ButtonExit" to="." method="_on_button_exit_pressed"]
